add tmp and tmux resurrect

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -65,3 +65,9 @@ bind -r C-j resize-pane -D 5
 bind -r C-k resize-pane -U 5
 bind -r C-l resize-pane -R 5
 
+# Tmux Plugin Manager(tmp)
+set -g @tpm_plugins '              \
+  tmux-plugins/tpm                 \
+  tmux-plugins/tmux-resurrect      \
+'
+run-shell '~/.tmux/plugins/tpm/tpm'
