add tmux-yank plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,21 +34,12 @@ set-window-option -g window-status-current-bg green
 set-window-option -g window-status-current-fg black
 set-window-option -g window-status-current-attr bold
 
-# マウス有効
-set-option -g mouse-select-pane on
-
 # ウィンドウ等の番号基準値
 set-option -g base-index 1
 
 # emacsっぽく
 set-window-option -g mode-keys emacs
 # emacsっぽくコピペ
-unbind -t emacs-copy Enter
-unbind -t emacs-copy C-w
-unbind -t emacs-copy M-w
-bind-key -t emacs-copy C-w   copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -t emacs-copy M-w   copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -t emacs-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 bind-key C-y paste-buffer
 # emacsっぽくウィンドウ分割
 unbind 1
@@ -69,5 +60,9 @@ bind -r C-l resize-pane -R 5
 set -g @tpm_plugins '              \
   tmux-plugins/tpm                 \
   tmux-plugins/tmux-resurrect      \
+  tmux-plugins/tmux-yank           \
 '
 run-shell '~/.tmux/plugins/tpm/tpm'
+
+# tmux-yank setting
+set -g @yank_selection 'primary'
