--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,6 +61,7 @@ set -g @tpm_plugins '              \
   tmux-plugins/tpm                 \
   tmux-plugins/tmux-resurrect      \
   tmux-plugins/tmux-yank           \
+  tmux-plugins/tmux-sensible       \
 '
 run-shell '~/.tmux/plugins/tpm/tpm'
 
