--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,6 +62,7 @@ set -g @tpm_plugins '              \
   tmux-plugins/tmux-resurrect      \
   tmux-plugins/tmux-yank           \
   tmux-plugins/tmux-sensible       \
+  tmux-plugins/tmux-copycat        \
 '
 run-shell '~/.tmux/plugins/tpm/tpm'
 
