add shell setting

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,9 @@
 set-window-option -g utf8 on
 
+# shell
+set-option -g default-shell /bin/zsh
+set-option -g default-command /bin/zsh
+
 # 色設定
 set-option -g default-terminal screen-256color
 
